# feedme

./: CLAUDE.md  Cargo.toml  LICENSE
migrations/: 001_create_ingredients.sql  002_create_recipes.sql  003_create_recipe_ingredients.sql
src/: error.rs  lib.rs  main.rs
src/controllers/: ingredient_controller.rs  mod.rs  recipe_controller.rs
src/models/: ingredient.rs  mod.rs  recipe.rs  recipe_ingredient.rs  test_fixtures.rs
src/models/api/: mod.rs  recipe.rs  shopping_list.rs
src/tui/: app.rs  ingredient_states.rs  mod.rs
tests/: test_integration.rs
