[package]
name = "feedme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.28"
indexmap = "2.12.0"
ratatui = "0.29.0"
rstest = "0.26.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }

